# skeleton_aligner

./: CMakeLists.txt  README.md  package.xml
config/: marker_ids.yaml
include/skeleton_aligner/: Aligner.h  TfBuffer.h  TfCluster.h  utils.h
include/skeleton_fusion/: Aligner.h  Filter.h  utils.h
launch/: default.launch.py
src/: Aligner.cpp  Filter.cpp  TfBuffer.cpp  TfCluster.cpp  main.cpp  utils.cpp
